[package]
name = "pgstatprof"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]
edition = "2021"

[dependencies]
postgres = "0.19"
postgres-native-tls = "0.5"
getopts = "0.2"
uzers = "0.11"
chrono = { git = "https://github.com/chronotope/chrono", rev = "1a0d47a3e58eeb44e2b5022547262650d1a7a436", features = ["clock"] }
regex = "1"
lazy_static = "1.0"
